--- a/main.html
+++ b/main.html
@@ -7,5 +7,7 @@
 <input type="text">Username</input>
 <input type="text">Password</input>
 <button onclick="CreateNewAccount()">Create a new account</button>
+<br>
+<p1 id="AccountCreationFailed"></p1>
 </body>
 </html> 
