--- a/main.html
+++ b/main.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
 <body>
+<link rel="stylesheet" href="https://raw.githubusercontent.com/hellonearth311/Fake-Account-Creation-Site/main/style.css">
+<script src="https://raw.githubusercontent.com/hellonearth311/Fake-Account-Creation-Site/main/main.js">
+</script>
+  
 <h1>Create a new account today!</h1>
 <br>
 <br>
