--- a/main.html
+++ b/main.html
@@ -1,8 +1,26 @@
 <!doctype html>
 <html>
 <body>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/hellonearth311/Fake-Account-Creation-Site/main/style.css">
-<script src="https://raw.githubusercontent.com/hellonearth311/Fake-Account-Creation-Site/main/main.js">
+<style>
+ h1 {
+background-color:red;
+color:green;
+text-align:center;
+}
+button {
+background-color:green;
+color:blue;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+  </style>
+<script>
+function CreateNewAccount()
+document.getElementById('AccountCreationFailed').innerHTML="Sorry! There was an error creating your account. We'll try to fix this soon!"
 </script>
   
 <h1>Create a new account today!</h1>
